강의 리스트와 합치고 강의시작시 livelist 데이터에 저장

--- a/src/main/resources/templates/videoroomtest.html
+++ b/src/main/resources/templates/videoroomtest.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml">
-
+<html xmlns="http://www.w3.org/1999/xhtml"
+		xmlns:th="http://www.thymeleaf.org">
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -56,17 +56,8 @@
       <div class="col-md-12">
         <div class="page-header">
           <h1>화상강의
-            <button class="btn btn-default" autocomplete="off" id="start">Start</button>
+            <button class="btn btn-default" autocomplete="off" onClick="window.close()">강의 나가기</button>
           </h1>
-        </div>
-        <div class="container" id="details">
-          <div class="row">
-            <div class="col-md-12">
-              <h3>Start 버튼을 누르고 데모를 시작하세요</h3>
-              <h4>채팅방 ID로 기존 채팅방을 연결하거나 새로 생성합니다.</h4>
-              <h4>* ID는 영문 또는 숫자로 입력해야 합니다.</h4>
-            </div>
-          </div>
         </div>
         <div class="container hide" id="videojoin">
           <div class="row">
@@ -74,13 +65,13 @@
               <div id="registernow">
                 <span class="label label-info" id="room"></span>
                 <div class="input-group margin-bottom-md " style="width: 100% !important;">
-                  <input autocomplete="off" class="form-control" type="text" placeholder="Room Name" id="roomname" />
+                  <input autocomplete="off" class="form-control" type="text" th:value="${liveClno}" placeholder="Room Name" id="roomname" readonly/>
                 </div>
                 <span class="label label-info" id="you"></span>
                 <div class="input-group margin-bottom-md ">
                   <span class="input-group-addon">대화명</span>
-                  <input autocomplete="off" class="form-control" type="text" placeholder="My Name" id="username"
-                    onkeypress="return checkEnter(this, event);" />
+                  <input autocomplete="off" class="form-control" type="text" value="raccoon508@gmail.com" placeholder="My Name" id="username"
+                    onkeypress="return checkEnter(this, event);" readonly/>
                   <span class="input-group-btn">
                     <button class="btn btn-success" autocomplete="off" id="register">대화방 참여</button>
                   </span>
@@ -157,6 +148,22 @@
                   <h3 class="panel-title">Remote Video #5 <span class="label label-info hide" id="remote5"></span></h3>
                 </div>
                 <div class="panel-body relative" id="videoremote5"></div>
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="panel panel-default">
+                <div class="panel-heading">
+                  <h3 class="panel-title">Remote Video #6 <span class="label label-info hide" id="remote6"></span></h3>
+                </div>
+                <div class="panel-body relative" id="videoremote6"></div>
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="panel panel-default">
+                <div class="panel-heading">
+                  <h3 class="panel-title">Remote Video #7 <span class="label label-info hide" id="remote7"></span></h3>
+                </div>
+                <div class="panel-body relative" id="videoremote7"></div>
               </div>
             </div>
           </div>
