--- a/src/main/resources/templates/member/mypage.html
+++ b/src/main/resources/templates/member/mypage.html
@@ -6,13 +6,111 @@
 <title>Insert title here</title>
 
 </head>
+
 <body>
 <div class="wrapper">
 <th:block layout:fragment="header" th:include="@{/header}"></th:block>
-	mypage
-	<div th:text="${member.memId}"></div>
-	<div th:text="${member.memRole}"></div>
+<div id="edit" class="login" align="center">
+<h2 class="join_title">회원수정</h2>
+<form name="eidtform" method="post" action="/member_edit.do"
+	onsubmit="return edit_check()" enctype="multipart/form-data">
+	<input type="hidden" name="_csrf" th:value="${_csrf?.token}">
+	<input type="hidden" name="memId" th:value="${memId}">
+	<table id="join_t">
+		<tr>
+			<th>회원아이디</th>
+			<td th:text="${memId}"></td>
+		</tr>
+		<tr>
+			<th>회원비번</th>
+			<td><input type="password" name="memPw" id="join_pw" size="14" class="input_box" /></td>
+		</tr>
+		<tr>
+			<th>회원이름</th>
+			<td><input name="memName" id="join_name" size="14" class="input_box"/></td>
+		</tr>
+		<tr>
+			<th>닉네임</th>
+			<td><input name="memNickname" id="join_nickname" size="10" class="input_box" /></td>
+		</tr>
+		<tr>
+			<th>생년월일</th>
+			<td><input name="memBirth" id="join_birth" size="10" class="input_box" /></td>
+		</tr>
+		<tr>
+			<th>연락처</th>
+			<td><input name="memTel" id="join_tel" class="input_box"/></td>
+		</tr>
+	</table>
+	<div id="eidt_menu">
+		<input type="submit" value="회원수정" class="input_button" />
+		<input type="reset" value="수정취소" class="input_button" onclick="$('#join_pw').focus();" />
+		<input type="button" value="회원탈퇴" onClick="deleteMember()" />
+	</div>
+</form>
+</div>
 </div>
 <th:block layout:fragment="footer" th:include="@{/footer}"></th:block>
 </body>
+<script th:inline="javascript">
+var memId = /*[[${memId}]]*/ null;
+//contextPath 길어서 변수 할당 
+var contextPath = "${pageContext.request.contextPath}";
+
+$(document).ready(function(){
+	UpdateUser(memId);
+});
+
+function UpdateUser(memId){
+	$.ajax({
+		type: "GET",
+		url: "updateMemForm/"+memId,
+		success: function(result){
+			// 서버로부터 받은 회원 정보(result)를 폼에 채우기
+            $('#join_name').val(result.editm.memName);
+            $('#join_nickname').val(result.editm.memNickname);
+            $('#join_tel').val(result.editm.memTel);
+            $('#join_birth').val(result.editm.memBirth);
+		}
+	});
+}
+
+//사용자 탈퇴하기
+function deleteMember(){
+	location.href="deleteMember";
+}
+
+function edit_check(){
+	if($.trim($("#join_pw").val())==""){
+		 alert("회원비번을 입력하세요!");
+		 $("#join_pw").val("").focus();
+		 return false;
+	 }
+	 if($.trim($("#join_name").val())==""){
+		 alert("회원이름을 입력하세요!");
+		 $("#join_name").val("").focus();
+		 return false;
+	 }
+	 if($.trim($("#join_nickname").val())==""){
+		 alert("닉네임을 입력하세요!");
+		 $("#join_nickname").val("").focus();
+		 return false;
+	 }
+	 if($.trim($("#join_birth").val())==""){
+		 alert("생년월일을 입력하세요!");
+		 $("#join_birth").val("").focus();
+		 return false;
+	 }
+	 if($.trim($("#join_tel").val())==""){
+		 alert("연락처를 입력하세요!");
+		 $("#join_tel").val("").focus();
+		 return false;
+	 }
+	 if($.trim($("#join_tel").val())==""){
+		 alert("휴대전화번호를 입력하세요!");
+		 $("#join_tel").val("").focus();
+		 return false;
+	 }
+}
+</script>
 </html>
