--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -9,7 +9,7 @@
 	</div>
 	
 	<div> 
-		<h1><img src="/image/airplane.png" alt="로고" style="weight: 100px; height:100px;"></h1>
+		<h1><a href='/main'><img src="/image/airplane.png" alt="로고" style="weight: 100px; height:100px;"></a></h1>
 	</div>
 	 
 	<div class="topMenu" >
