--- a/src/main/resources/templates/healthclass/updateform.html
+++ b/src/main/resources/templates/healthclass/updateform.html
@@ -14,7 +14,7 @@ function back(){
 </head>
 <body>
 <div class="wrapper">
-<th:block layout:fragment="header" th:include="@{/header}"></th:block>
+<th:block layout:fragment="header" th:insert="~{@{/header}}"></th:block>
 	<div class="container" align="center">
 		<h2 class="text-primary">강좌 수정</h2>
 		<form th:action="@{/healthclass/update/{cl_no}(cl_no=${healthclass.clNo})}" method="post" name="frm"
@@ -103,7 +103,7 @@ function back(){
 		</form>
 	</div>
 </div>
-<th:block layout:fragment="footer" th:include="@{/footer}"></th:block>
+<th:block layout:fragment="footer" th:insert="~{@{/footer}}"></th:block>
 </body>
 <script th:inline="javascript">
 function goBack() {
