--- a/src/main/resources/templates/member/deleteMember.html
+++ b/src/main/resources/templates/member/deleteMember.html
@@ -2,6 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="UTF-8">
+<link rel="stylesheet" href="../css/header.css">
 <title>deleteMember</title>
 <script src="http://code.jquery.com/jquery-latest.js"></script>
 </head>
