--- a/src/main/resources/templates/healthclass/list.html
+++ b/src/main/resources/templates/healthclass/list.html
@@ -114,7 +114,7 @@ window.onload = function() {
 	<input type="hidden" name="listCategory" th:value="${listCategory}"/>
 	<input type="submit" value="검색">
 	</form>
-<input sec:autorize="isAuthenticated()" type="button" value="강좌 작성" onclick="location.href='/healthclass/writeform'" />
+<input sec:authorize = "isAuthenticated()" type="button" value="강좌 작성" onclick="location.href='/healthclass/writeform'" />
 </div>
 </div>
 <th:block layout:fragment="footer" th:insert="~{@{/footer}}"></th:block>
