--- a/src/main/resources/templates/healthclass/detail.html
+++ b/src/main/resources/templates/healthclass/detail.html
@@ -47,10 +47,12 @@
 	<a th:text="|소요시간(분) : ${healthclass.clTime} |"></a>
 </div>
 <div class="content">
-	<a>강사 프로필 : </a><ul class="image-profile" id="image-profile"></ul>
+	<a>강사 프로필 : </a><image th:src="@{/image/profile/}+${healthclass.clNo} + @{_}+${healthclass.clProfile}" style="width:200px; height:200px;"
+	  			alt="저장된 이미지 없음"/>
 </div>
 <div class="content">
-	<a>강좌 썸네일 : </a><ul class="image-thumbnail" id="image-thumbnail"></ul>
+	<a>강좌 썸네일 : </a><image th:src="@{/image/thumbnail/}+${healthclass.clNo} + @{_}+${healthclass.clThumbnail}" style="width:200px; height:200px;"
+	  			alt="저장된 이미지 없음"/>
 </div>
 <div>
 <input type="button" value="수강신청" sec:authorize="isAuthenticated()" 
@@ -104,53 +106,5 @@
 </div>
 <th:block layout:fragment="footer" th:insert="~{@{/footer}}"></th:block>
 </body>
-<script th:inline="javascript">
-function classnoticeWrite() {
-	fetch('classnotice/write.do', {
-		method : 'POST',
-		body : JSON.stringify({
-			"clnContent" : document.getElementById('clnContent').value
-		})
-	}).then( (res) => {
-		if ( !res.ok )
-			throw new Error("400 or 500 ERR");
-		return res.json();
-	}).then( (data) => {
-		console.log(data);
-	}).catch(e=> console.log("err:"+e));
-}
-function goBack() {
-	window.history.back();
-}
-window.onload = function() {
-	const cl_no = /*[[${healthclass.clNo}]]*/'기본값';
-	const profileFileName = /*[[${healthclass.clProfile}]]*/'기본값';
-	const thumbnailFileName = /*[[${healthclass.clThumbnail}]]*/'기본값';
-	if ( profileFileName == null) {
-		document.getElementById("image-profile").innerHTML = "<a>프로필 사진 없음</a>";
-	}
-	else {
-		const preview = createElement2(cl_no, profileFileName);
-		document.getElementById("image-profile").appendChild(preview);
-	}
-	if (thumbnailFileName == null ) {
-		document.getElementById("image-thumbnail").innerHTML = "<a>썸네일 사진 없음</a>";
-	}
-	else {
-		const preview = createElement2(cl_no, thumbnailFileName);
-		document.getElementById("image-thumbnail").appendChild(preview);
-	}
-}
-function createElement2(cl_no, FileName) {
-	const li = document.createElement('li');
-    const img = document.createElement('img');
-    //img.setAttribute('src', filename);
-    img.setAttribute('src', "/upload/"+cl_no + "_" + FileName);
-    //img.setAttribute('src', "upload/"+cl_no + "_"+ FileName);
-    img.setAttribute('width', 150);
-    img.setAttribute('height', 150);
-    li.appendChild(img);
-    return li;
-}
-</script>
+
 </html>
