진행중인 강의가 없을때 메인페이지 처리

--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -81,6 +81,9 @@ $(function(){
 	  			</a>[[${list.liveName}]]
 			</div>
 		</div>
+		<div th:if="${livelist.size == 0}" >
+			<h3 style="text-align: center;">현재 진행중인 강의가 없습니다.</h3>
+		</div>
 	</div>
 	<div class="container">
 		<div id="MainboardList" class="MainboardList"></div>
