--- a/src/main/resources/templates/accessDenied.html
+++ b/src/main/resources/templates/accessDenied.html
@@ -2,13 +2,20 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Insert title here</title>
+<link rel="stylesheet" href="../css/header.css">
 </head>
 <body>
 <div class="wrapper">
 <th:block layout:fragment="header" th:insert="~{@{/header}}"></th:block>
-admin page
+<h2>접근 제한 오류 . 메인 페이지로 이동합니다 ..</h2>
 </div>
 <th:block layout:fragment="footer" th:insert="~{@{/footer}}"></th:block>
+<script>
+	setTimeout(function() {
+		location.href = "/main";
+	}, 1000);
+</script>
 </body>
 </html>
